--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           iaculis sit amet.
         </p>
         <button class="btn content-btn">learn more</button>
-        <div class="contect-list-items">
+        <div class="content-list-items">
           <div class="content-item">
             <h3>150m+</h3>
             <p>
